--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ input[type="image"]{
     width: fit-content;
     margin: auto;
     padding: 10px;
-    bottom: 0px;
     margin-top: 150px;
+    margin-bottom: 0px;
     box-shadow: -1px -1px 20px 6px black;
     border-radius: 10px;
 }
